Bug 293354 - Generating session names from connection properties and SE deployment changes